change the download code

--- a/download.html
+++ b/download.html
@@ -9,9 +9,9 @@
 
   <body>
     <a
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Google_Images_2015_logo.svg/800px-Google_Images_2015_logo.svg.png"
-      download="notes"
-      type="image/pmg"
+      href="img/pexels-photo-12957796.jpeg"
+      download
+      type="image/jpeg"
       title="Click here to Download this image"
       >Download this image</a
     >
